@@ -2,6 +2,27 @@ begin_unit|revision:0.9.5;language:C;cregit-version:0.0.1
 begin_define
 define|#
 directive|define
+name|a0calloc
+value|JEMALLOC_N(a0calloc)
+end_define
+
+begin_define
+define|#
+directive|define
+name|a0free
+value|JEMALLOC_N(a0free)
+end_define
+
+begin_define
+define|#
+directive|define
+name|a0malloc
+value|JEMALLOC_N(a0malloc)
+end_define
+
+begin_define
+define|#
+directive|define
 name|arena_alloc_junk_small
 value|JEMALLOC_N(arena_alloc_junk_small)
 end_define
@@ -513,15 +534,8 @@ end_define
 begin_define
 define|#
 directive|define
-name|chunk_boot0
-value|JEMALLOC_N(chunk_boot0)
-end_define
-
-begin_define
-define|#
-directive|define
-name|chunk_boot1
-value|JEMALLOC_N(chunk_boot1)
+name|chunk_boot
+value|JEMALLOC_N(chunk_boot)
 end_define
 
 begin_define
@@ -571,13 +585,6 @@ define|#
 directive|define
 name|chunk_in_dss
 value|JEMALLOC_N(chunk_in_dss)
-end_define
-
-begin_define
-define|#
-directive|define
-name|chunk_mmap_boot
-value|JEMALLOC_N(chunk_mmap_boot)
 end_define
 
 begin_define
@@ -1327,34 +1334,6 @@ define|#
 directive|define
 name|mb_write
 value|JEMALLOC_N(mb_write)
-end_define
-
-begin_define
-define|#
-directive|define
-name|mmap_unaligned_tsd_boot
-value|JEMALLOC_N(mmap_unaligned_tsd_boot)
-end_define
-
-begin_define
-define|#
-directive|define
-name|mmap_unaligned_tsd_cleanup_wrapper
-value|JEMALLOC_N(mmap_unaligned_tsd_cleanup_wrapper)
-end_define
-
-begin_define
-define|#
-directive|define
-name|mmap_unaligned_tsd_get
-value|JEMALLOC_N(mmap_unaligned_tsd_get)
-end_define
-
-begin_define
-define|#
-directive|define
-name|mmap_unaligned_tsd_set
-value|JEMALLOC_N(mmap_unaligned_tsd_set)
 end_define
 
 begin_define
