@@ -483,7 +483,15 @@ argument_list|)
 expr_stmt|;
 ifdef|#
 directive|ifdef
-name|JEMALLOC_PURGE_MADVISE_FREE
+name|JEMALLOC_PURGE_MADVISE_DONTNEED
+comment|/* Pages are zeroed as a side effect of pages_purge(). */
+operator|*
+name|zero
+operator|=
+name|true
+expr_stmt|;
+else|#
+directive|else
 if|if
 condition|(
 operator|*
@@ -593,6 +601,26 @@ condition|)
 goto|goto
 name|label_return
 goto|;
+name|ret
+operator|=
+name|chunk_alloc_mmap
+argument_list|(
+name|size
+argument_list|,
+name|alignment
+argument_list|,
+name|zero
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|ret
+operator|!=
+name|NULL
+condition|)
+goto|goto
+name|label_return
+goto|;
 if|if
 condition|(
 name|config_dss
@@ -615,31 +643,6 @@ name|ret
 operator|!=
 name|NULL
 condition|)
-goto|goto
-name|label_return
-goto|;
-block|}
-name|ret
-operator|=
-name|chunk_alloc_mmap
-argument_list|(
-name|size
-argument_list|,
-name|alignment
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-name|ret
-operator|!=
-name|NULL
-condition|)
-block|{
-operator|*
-name|zero
-operator|=
-name|true
-expr_stmt|;
 goto|goto
 name|label_return
 goto|;
@@ -796,6 +799,63 @@ name|gdump
 condition|)
 name|prof_gdump
 argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|config_debug
+operator|&&
+operator|*
+name|zero
+operator|&&
+name|ret
+operator|!=
+name|NULL
+condition|)
+block|{
+name|size_t
+name|i
+decl_stmt|;
+name|size_t
+modifier|*
+name|p
+init|=
+operator|(
+name|size_t
+operator|*
+operator|)
+operator|(
+name|uintptr_t
+operator|)
+name|ret
+decl_stmt|;
+for|for
+control|(
+name|i
+operator|=
+literal|0
+init|;
+name|i
+operator|<
+name|size
+operator|/
+sizeof|sizeof
+argument_list|(
+name|size_t
+argument_list|)
+condition|;
+name|i
+operator|++
+control|)
+name|assert
+argument_list|(
+name|p
+index|[
+name|i
+index|]
+operator|==
+literal|0
+argument_list|)
 expr_stmt|;
 block|}
 name|assert
@@ -1230,16 +1290,22 @@ condition|)
 block|{
 if|if
 condition|(
+operator|(
+name|config_dss
+operator|&&
+name|chunk_in_dss
+argument_list|(
+name|chunk
+argument_list|)
+operator|)
+operator|||
 name|chunk_dealloc_mmap
 argument_list|(
 name|chunk
 argument_list|,
 name|size
 argument_list|)
-operator|==
-name|false
 condition|)
-return|return;
 name|chunk_record
 argument_list|(
 name|chunk
@@ -1253,7 +1319,7 @@ end_function
 
 begin_function
 name|bool
-name|chunk_boot0
+name|chunk_boot
 parameter_list|(
 name|void
 parameter_list|)
@@ -1386,31 +1452,6 @@ name|true
 operator|)
 return|;
 block|}
-return|return
-operator|(
-name|false
-operator|)
-return|;
-block|}
-end_function
-
-begin_function
-name|bool
-name|chunk_boot1
-parameter_list|(
-name|void
-parameter_list|)
-block|{
-if|if
-condition|(
-name|chunk_mmap_boot
-argument_list|()
-condition|)
-return|return
-operator|(
-name|true
-operator|)
-return|;
 return|return
 operator|(
 name|false
