@@ -373,11 +373,29 @@ argument_list|,
 name|true
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
 operator|*
 name|zero
-operator|=
-name|true
+condition|)
+block|{
+name|VALGRIND_MAKE_MEM_UNDEFINED
+argument_list|(
+name|ret
+argument_list|,
+name|size
+argument_list|)
 expr_stmt|;
+name|memset
+argument_list|(
+name|ret
+argument_list|,
+literal|0
+argument_list|,
+name|size
+argument_list|)
+expr_stmt|;
+block|}
 return|return
 operator|(
 name|ret
