@@ -16,46 +16,6 @@ comment|/***********************************************************************
 end_comment
 
 begin_comment
-comment|/* Data. */
-end_comment
-
-begin_comment
-comment|/*  * Used by chunk_alloc_mmap() to decide whether to attempt the fast path and  * potentially avoid some system calls.  */
-end_comment
-
-begin_macro
-name|malloc_tsd_data
-argument_list|(
-argument|static
-argument_list|,
-argument|mmap_unaligned
-argument_list|,
-argument|bool
-argument_list|,
-argument|false
-argument_list|)
-end_macro
-
-begin_macro
-name|malloc_tsd_funcs
-argument_list|(
-argument|JEMALLOC_INLINE
-argument_list|,
-argument|mmap_unaligned
-argument_list|,
-argument|bool
-argument_list|,
-argument|false
-argument_list|,
-argument|malloc_tsd_no_cleanup
-argument_list|)
-end_macro
-
-begin_comment
-comment|/******************************************************************************/
-end_comment
-
-begin_comment
 comment|/* Function prototypes for non-inline static functions. */
 end_comment
 
@@ -104,6 +64,10 @@ name|alignment
 parameter_list|,
 name|bool
 name|unaligned
+parameter_list|,
+name|bool
+modifier|*
+name|zero
 parameter_list|)
 function_decl|;
 end_function_decl
@@ -393,6 +357,10 @@ name|alignment
 parameter_list|,
 name|bool
 name|unaligned
+parameter_list|,
+name|bool
+modifier|*
+name|zero
 parameter_list|)
 block|{
 name|void
@@ -542,28 +510,18 @@ argument_list|,
 name|trailsize
 argument_list|)
 expr_stmt|;
-comment|/* 	 * If mmap() returned an aligned mapping, reset mmap_unaligned so that 	 * the next chunk_alloc_mmap() execution tries the fast allocation 	 * method. 	 */
-if|if
-condition|(
-name|unaligned
-operator|==
-name|false
-operator|&&
-name|mmap_unaligned_booted
-condition|)
-block|{
-name|bool
-name|mu
-init|=
-name|false
-decl_stmt|;
-name|mmap_unaligned_tsd_set
+name|assert
 argument_list|(
-operator|&
-name|mu
+name|ret
+operator|!=
+name|NULL
 argument_list|)
 expr_stmt|;
-block|}
+operator|*
+name|zero
+operator|=
+name|true
+expr_stmt|;
 return|return
 operator|(
 name|ret
@@ -582,27 +540,20 @@ name|size
 parameter_list|,
 name|size_t
 name|alignment
+parameter_list|,
+name|bool
+modifier|*
+name|zero
 parameter_list|)
 block|{
 name|void
 modifier|*
 name|ret
 decl_stmt|;
-comment|/* 	 * Ideally, there would be a way to specify alignment to mmap() (like 	 * NetBSD has), but in the absence of such a feature, we have to work 	 * hard to efficiently create aligned mappings.  The reliable, but 	 * slow method is to create a mapping that is over-sized, then trim the 	 * excess.  However, that always results in at least one call to 	 * pages_unmap(). 	 * 	 * A more optimistic approach is to try mapping precisely the right 	 * amount, then try to append another mapping if alignment is off.  In 	 * practice, this works out well as long as the application is not 	 * interleaving mappings via direct mmap() calls.  If we do run into a 	 * situation where there is an interleaved mapping and we are unable to 	 * extend an unaligned mapping, our best option is to switch to the 	 * slow method until mmap() returns another aligned mapping.  This will 	 * tend to leave a gap in the memory map that is too small to cause 	 * later problems for the optimistic method. 	 * 	 * Another possible confounding factor is address space layout 	 * randomization (ASLR), which causes mmap(2) to disregard the 	 * requested address.  mmap_unaligned tracks whether the previous 	 * chunk_alloc_mmap() execution received any unaligned or relocated 	 * mappings, and if so, the current execution will immediately fall 	 * back to the slow method.  However, we keep track of whether the fast 	 * method would have succeeded, and if so, we make a note to try the 	 * fast method next time. 	 */
-if|if
-condition|(
-name|mmap_unaligned_booted
-operator|&&
-operator|*
-name|mmap_unaligned_tsd_get
-argument_list|()
-operator|==
-name|false
-condition|)
-block|{
 name|size_t
 name|offset
 decl_stmt|;
+comment|/* 	 * Ideally, there would be a way to specify alignment to mmap() (like 	 * NetBSD has), but in the absence of such a feature, we have to work 	 * hard to efficiently create aligned mappings.  The reliable, but 	 * slow method is to create a mapping that is over-sized, then trim the 	 * excess.  However, that always results in at least one call to 	 * pages_unmap(). 	 * 	 * A more optimistic approach is to try mapping precisely the right 	 * amount, then try to append another mapping if alignment is off.  In 	 * practice, this works out well as long as the application is not 	 * interleaving mappings via direct mmap() calls.  If we do run into a 	 * situation where there is an interleaved mapping and we are unable to 	 * extend an unaligned mapping, our best option is to switch to the 	 * slow method until mmap() returns another aligned mapping.  This will 	 * tend to leave a gap in the memory map that is too small to cause 	 * later problems for the optimistic method. 	 * 	 * Another possible confounding factor is address space layout 	 * randomization (ASLR), which causes mmap(2) to disregard the 	 * requested address.  As such, repeatedly trying to extend unaligned 	 * mappings could result in an infinite loop, so if extension fails, 	 * immediately fall back to the reliable method of over-allocation 	 * followed by trimming. 	 */
 name|ret
 operator|=
 name|pages_map
@@ -639,17 +590,6 @@ operator|!=
 literal|0
 condition|)
 block|{
-name|bool
-name|mu
-init|=
-name|true
-decl_stmt|;
-name|mmap_unaligned_tsd_set
-argument_list|(
-operator|&
-name|mu
-argument_list|)
-expr_stmt|;
 comment|/* Try to extend chunk boundary. */
 if|if
 condition|(
@@ -676,7 +616,7 @@ operator|==
 name|NULL
 condition|)
 block|{
-comment|/* 				 * Extension failed.  Clean up, then revert to 				 * the reliable-but-expensive method. 				 */
+comment|/* 			 * Extension failed.  Clean up, then fall back to the 			 * reliable-but-expensive method. 			 */
 name|pages_unmap
 argument_list|(
 name|ret
@@ -684,8 +624,8 @@ argument_list|,
 name|size
 argument_list|)
 expr_stmt|;
-name|ret
-operator|=
+return|return
+operator|(
 name|chunk_alloc_mmap_slow
 argument_list|(
 name|size
@@ -693,8 +633,11 @@ argument_list|,
 name|alignment
 argument_list|,
 name|true
+argument_list|,
+name|zero
 argument_list|)
-expr_stmt|;
+operator|)
+return|;
 block|}
 else|else
 block|{
@@ -729,18 +672,17 @@ operator|)
 expr_stmt|;
 block|}
 block|}
-block|}
-else|else
-name|ret
-operator|=
-name|chunk_alloc_mmap_slow
+name|assert
 argument_list|(
-name|size
-argument_list|,
-name|alignment
-argument_list|,
-name|false
+name|ret
+operator|!=
+name|NULL
 argument_list|)
+expr_stmt|;
+operator|*
+name|zero
+operator|=
+name|true
 expr_stmt|;
 return|return
 operator|(
@@ -777,37 +719,6 @@ return|return
 operator|(
 name|config_munmap
 operator|==
-name|false
-operator|)
-return|;
-block|}
-end_function
-
-begin_function
-name|bool
-name|chunk_mmap_boot
-parameter_list|(
-name|void
-parameter_list|)
-block|{
-comment|/* 	 * XXX For the non-TLS implementation of tsd, the first access from 	 * each thread causes memory allocation.  The result is a bootstrapping 	 * problem for this particular use case, so for now just disable it by 	 * leaving it in an unbooted state. 	 */
-ifdef|#
-directive|ifdef
-name|JEMALLOC_TLS
-if|if
-condition|(
-name|mmap_unaligned_tsd_boot
-argument_list|()
-condition|)
-return|return
-operator|(
-name|true
-operator|)
-return|;
-endif|#
-directive|endif
-return|return
-operator|(
 name|false
 operator|)
 return|;
