@@ -2395,7 +2395,7 @@ return|;
 block|}
 if|if
 condition|(
-name|chunk_boot0
+name|chunk_boot
 argument_list|()
 condition|)
 block|{
@@ -2659,24 +2659,6 @@ operator|&
 name|init_lock
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|chunk_boot1
-argument_list|()
-condition|)
-block|{
-name|malloc_mutex_unlock
-argument_list|(
-operator|&
-name|init_lock
-argument_list|)
-expr_stmt|;
-return|return
-operator|(
-name|true
-operator|)
-return|;
-block|}
 if|if
 condition|(
 name|mutex_boot
